# cwdjango

./: .env_sample  README.md  data.json  data2.json  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  crontab.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: fill.py
mailing/migrations/: 0001_initial.py  0002_mailingmessage_mailinglog_mailinglist.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contact.html  index.html
mailing/templates/mailing/includes/: inc_client_card.html  inc_main_menu.html
users/: models.py
users/migrations/: 0001_initial.py
